<resources>
    <string name="app_name">금연365</string>
    <string name="facebook_app_id">547333618749996</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SplashActivity -->
    <string name="splash_message">금연 성공 리워드 서비스</string>

    <!-- BasisInfoActivity -->
    <string name="basis_text_motto">금연 목표</string>
    <string name="basis_text_startDate">금연 시작일</string>
    <string name="basis_text_numOfCigar">1일 흡연량(개비)</string>
    <string name="basis_text_packPrice">한 갑 가격</string>
    <string name="basis_text_gender">성별</string>
    <string name="basis_text_birthDate">생년월일</string>
    <string name="basis_btn_datepick">날짜 선택</string>
    <string name="basis_btn_finish">완료</string>
    <string name="basis_hint_motto">금연 좌우명을 입력해주세요</string>

    <!-- ProgressFragment -->
    <string name="progress_text_grade">회원 등급</string>
    <string name="progress_text_motto_info">나의 금연 다짐</string>
    <string name="progress_text_default_motto">금연 목표를 입력해 주세요</string>
    <string name="progress_text_banner1">에서 금연 성공 하고 120%의 </string>
    <string name="progress_text_banner2">금연 성공 포상금의 주인공이 되세요!</string>
    <string name="progress_text_time">금연 시간</string>
    <string name="progress_text_savedmoney">절약 금액</string>
    <string name="progress_text_status">건강 상태</string>
    <string name="progress_btn_board">금연 정보</string>
    <string name="progress_btn_community">금연갤</string>
    <string name="progress_btn_centers">내 주변 보건소 및 금연상담센터</string>

    <!-- ServiceInfoActivity -->
    <string name="service_text_title">리워드 서비스 이용방법</string>
    <string name="service_btn_register">서비스 신청하기</string>
    <string name="service_text_info">금연365 서비스는 단순하지만 확실합니다.\n금연365 서비스는 매달 흡연검사를 신청하고\n금연365 App을 통하여 금연을 진행합니다.\n이후 365일 동안 금연에 성공한다면 금연 성공 포상금으로 매달 신청하셨던 흡연검사 비용을 120%로 다시 돌려드립니다.\n또한 3개월 6개월 9개월 단위로 금연 의지가 낮아지지 않도록 다양한 이벤트와 선물을 제공해드리며 금연을 도와드립니다.</string>

    <!--healthgradeInfo-->
    <string name="health_grade_12">혈압, 맥박, 손발 체온이 정상으로 돌아옵니다.</string>
    <string name="health_grade_11">혈액 속의 니코틴이 감소하기 시작합니다.</string>
    <string name="health_grade_10">혈액 속의 일산화탄소와 산소 농도가 정상으로 돌아옵니다.</string>
    <string name="health_grade_9">심장마비의 위험이 감소합니다.</string>
    <string name="health_grade_8">신경말단 기능이 회복되어 후각, 미각 기능이 정상으로 돌아옵니다.</string>
    <string name="health_grade_7">기관지 기능이 회복되고 호흡이 정상으로 돌아옵니다.</string>
    <string name="health_grade_6">혈액순환이 좋아지고 폐활량이 30% 이상 증가합니다.</string>
    <string name="health_grade_5">기침, 코 막힘, 피로, 호흡곤란이 감소되고, 폐의 섬모가 정상 기능이 됩니다. 면역력이 증가하여 각종 질병에 덜 노출됩니다.</string>
    <string name="health_grade_4">관상동맥질환(심장병)에 걸릴 위험이 흡연자의 절반 수준으로 감소합니다.</string>
    <string name="health_grade_3">구강, 후두, 식도, 방광암에 걸릴 위험이 흡연자의 절반 수준으로 감소하고, 자궁 경부암과 뇌졸중에 걸릴 위험이 비흡연자 수준으로 감소합니다.</string>
    <string name="health_grade_2">폐암 사망률이 흡연자의 절반 수준으로 감소하고, 암으로 진행될 수 있는 위험을 가진 세포들이 정상 세포로 바뀝니다.</string>
    <string name="health_grade_1">관상동맥질환(심장병)에 걸릴 위험이 비흡연자들과 동일해집니다.</string>

    <!-- BoardActivity -->
    <string name="board_btn_like">좋아요</string>
    <string name="board_btn_comments">댓글</string>
    <string name="board_btn_share">공유하기</string>


    <!-- OptionsFragment -->
    <string name="options_btn_login">로그인</string>
    <string name="options_btn_logout">로그아웃</string>
    <string name="options_basis_info">기초정보 수정</string>
    <string name="options_user_info">회원정보 수정</string>
    <string name="options_alarm">알람 설정</string>
    <string name="options_notice">공지사항 및 이벤트</string>
    <string name="options_question">문의하기</string>
    <string name="options_withdraw">회원 탈퇴</string>
    <string name="options_version_info">이용 안내 및 버전 정보</string>

    <!-- LoginFragment -->
    <string name="login_text_email">E-mail</string>
    <string name="login_text_password">비밀번호</string>
    <string name="login_checkbox_autologin">로그인 상태 유지</string>
    <string name="login_text_find">회원정보 찾기</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_facebook">페이스북 로그인</string>
    <string name="login_btn_signup">회원가입</string>
    <!-- SignupFragmnet -->
    <string name="signup_text_nickname">닉네임</string>
    <string name="signup_text_email">E-mail</string>
    <string name="signup_text_password">비밀번호</string>
    <string name="signup_text_passwordCheck">비밀번호 확인</string>
    <string name="signup_text_accesstermsCheck">이용약관 확인</string>
    <string name="signup_btn_finish">완료</string>
    <string name="signup_btn_facebook">Facebook으로 회원가입</string>

    <!-- Question Activity -->
    <string name="question_text_title">문의드립니다.</string>
    <string name="question_text_title_hint">문의 글 제목</string>
    <string name="question_text_hint">궁금한 사항이 있으시면 언제든지 문의 주세요 :^)</string>
    <string name="question_text_info">가입시 등록되었던 메일로 답변 드립니다.</string>
    <string name="question_btn_finish">문의하기</string>

    <!-- VersionInfo Activity -->
    <string name="version_info">버전 1.0.0</string>
    <string name="version_btn_access_terms">이용 약관</string>
    <string name="version_btn_preview_info">이용 안내</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="title_activity_community_post">CommunityPostActivity</string>

    <!-- Withdraw Activity -->
    <string name="withdraw_text_1">회원 탈퇴 안내</string>
    <string name="withdraw_text_2">탈퇴 신청 사유를 알려주시면 더욱 좋은 서비스를 만들기 위한 밑거름으로 삼겠습니다.</string>
    <string name="withdraw_info">\n 금연 365 APP을 다시 이용하지 않으려면 계정을 영구적으로 삭제하도록 탈퇴하기를 요청하면 됩니다.\n\n
                                 한번 삭제된 계정은 다시 활성화 될 수 없으며, 회원 탈퇴 완료 후 금연 365 백업 시스템에 저장된 회원님 정보의 모든 내용이 완전히 삭제 되기까지는 90일 정도 소요될 수 있습니다.\n\n
                                 아래 탈퇴 신청 사유를 작성해 주시고 탈퇴하기 버튼을 눌러주시면 회원 탈퇴가 완료됩니다.\n
                                 신중하게 생각하시고 신청해주시길 바랍니다.\n</string>
    <string name="withdraw_check_1">금연에 성공하였다.</string>
    <string name="withdraw_check_2">서비스가 불만족스럽다.</string>
    <string name="withdraw_check_etc">기타</string>
    <string name="withdraw_edit_etc">기타 사유</string>
    <string name="withdraw_btn_submit">탈퇴하기</string>


</resources>
