<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="aftercoffee.org.nonsmoking365.activity.WithdrawActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/withdraw_text_1"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorEFEFEF"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/textView7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/withdraw_info"/>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/withdraw_text_2"
        android:layout_above="@+id/reason_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7" />

    <RadioGroup
        android:id="@+id/reason_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_etc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/radio_reason_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_check_1" />
        <RadioButton
            android:id="@+id/radio_reason_badservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_check_2" />
        <RadioButton
            android:id="@+id/radio_reason_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_check_etc" />
    </RadioGroup>
    <EditText
        android:id="@+id/edit_etc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:singleLine="true"
        android:hint="기타 사유 작성"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/btn_submit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="@string/withdraw_btn_submit"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:stateListAnimator="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
