<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="aftercoffee.org.nonsmoking365.Main.ProgressFragment">


    <!-- 회원 등급 (GRADE) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/progress_text_grade" />
        <TextView
            android:id="@+id/text_gradeView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:text="grade"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDDD"/>

    <!-- 금연 목표 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:id="@+id/text_mottoView"
        android:textColor="#00004A"
        android:textStyle="bold"
        android:text="@string/progress_text_default_motto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDDD"/>

    <!-- 금연 시간 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/progress_text_time" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:id="@+id/text_timeView"
            android:text="time test" />
    </LinearLayout>


    <!-- 절약 금액 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/progress_text_savedmoney" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:id="@+id/text_savedmoneyView"
            android:text="savedmoney test"/>
    </LinearLayout>

    <!-- 건강 상태 (STATUS) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/progress_text_status" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:id="@+id/text_statusView"
            android:text="status test" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDDD" />

    <!-- Banner -->
    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorAccent" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/logo"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="bottom|left"
                    android:text="@string/progress_text_banner1"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="top|left"
                    android:text="@string/progress_text_banner2"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <!-- Buttons -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_border"
        android:text="@string/progress_btn_board"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_board" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_border"
        android:text="@string/progress_btn_community"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_community" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_border"
        android:text="@string/progress_btn_centers"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_centers" />


</LinearLayout>
