<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="aftercoffee.org.nonsmoking365.main.OptionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_userProfileImage"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/text_userNickname"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_btn_login"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_login"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_basis_info"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_basisInfo"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_alarm"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_alarm"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_notice"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_notice"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_question"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_question"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_withdraw"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_withdraw"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_version_info"
        android:textColor="@color/selector_text_color_black_to_white"
        android:id="@+id/btn_versionInfo"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_color_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

</LinearLayout>
