<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="aftercoffee.org.nonsmoking365.activity.QuestionActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorEFEFEF"
        android:singleLine="true"
        android:text="@string/question_text_title"
        android:hint="@string/question_text_title_hint"
        android:id="@+id/edit_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/edit_content"
            android:gravity="top"
            android:background="@color/colorWhite"
            android:hint="@string/question_text_hint" />
        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/simple_circle"
                android:id="@+id/image_add"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="이미지"
                android:textColor="@color/colorWhite"
                android:clickable="false"
                android:focusable="false"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/colorEFEFEF"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text_info"
            android:id="@+id/textView" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_btn_finish"
            android:id="@+id/btn_finish"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>



</LinearLayout>
